[#9389] Replace hamcrest into assertj